Fixed styling on mobile layout.

--- a/src/components/PostCategoriesNav.css
+++ b/src/components/PostCategoriesNav.css
@@ -56,5 +56,6 @@
   .PostCategoriesNav input[type='text'] {
     position: relative;
     width: 100%;
+    margin: 2rem 0;
   }
 }
